temp_error.log
warning: unused import: `TopologyResponse`
 --> web/src/tasks.rs:2:21
  |
2 | ...::{TopologyResponse, T...
  |       ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unnecessary parentheses around function argument
   --> web/src/tasks.rs:160:117
    |
160 | ...th=(NODE_WIDTH - 24.0) he...
    |       ^                 ^
    |
    = note: `#[warn(unused_parens)]` (part of `#[warn(unused)]`) on by default
help: remove these parentheses
    |
160 -                                     <foreignObject x=-(NODE_WIDTH / 2.0) + 12.0 y=-(NODE_HEIGHT / 2.0) + 32.0 width=(NODE_WIDTH - 24.0) height=(NODE_HEIGHT - 40.0)>
160 +                                     <foreignObject x=-(NODE_WIDTH / 2.0) + 12.0 y=-(NODE_HEIGHT / 2.0) + 32.0 width=NODE_WIDTH - 24.0  height=(NODE_HEIGHT - 40.0)>
    |

warning: unnecessary parentheses around function argument
   --> web/src/tasks.rs:160:144
    |
160 | ...ht=(NODE_HEIGHT - 40.0)>
    |       ^                  ^
    |
help: remove these parentheses
    |
160 -                                     <foreignObject x=-(NODE_WIDTH / 2.0) + 12.0 y=-(NODE_HEIGHT / 2.0) + 32.0 width=(NODE_WIDTH - 24.0) height=(NODE_HEIGHT - 40.0)>
160 +                                     <foreignObject x=-(NODE_WIDTH / 2.0) + 12.0 y=-(NODE_HEIGHT / 2.0) + 32.0 width=(NODE_WIDTH - 24.0) height=NODE_HEIGHT - 40.0 >
    |

warning: unused variable: `did_move`
   --> web/src/agents.rs:174:29
    |
174 | ...et did_move = d...
    |       ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_did_move`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `set_crash_log`
  --> web/src/agents.rs:91:21
   |
91 | ...g, set_crash_log) =...
   |       ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_set_crash_log`

warning: variable does not need to be mutable
   --> web/src/agents.rs:252:18
    |
252 | ...et mut start = i;
    |       ----^^^^^
    |       |
    |       help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `set_rendered_nodes`
  --> web/src/tasks.rs:10:26
   |
10 | ...s, set_rendered_nodes) =...
   |       ^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_set_rendered_nodes`

warning: unused variable: `set_rendered_edges`
  --> web/src/tasks.rs:11:26
   |
11 | ...s, set_rendered_edges) =...
   |       ^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_set_rendered_edges`

warning: unused variable: `set_max_width`
  --> web/src/tasks.rs:14:21
   |
14 | ...h, set_max_width) =...
   |       ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_set_max_width`

warning: unused variable: `set_max_height`
  --> web/src/tasks.rs:15:22
   |
15 | ...t, set_max_height) =...
   |       ^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_set_max_height`

warning: function `AgentsView` should have a snake case name
 --> web/src/agents.rs:6:8
  |
6 | ...fn AgentsView() -...
  |       ^^^^^^^^^^ help: convert the identifier to snake case: `agents_view`
  |
  = note: `#[warn(non_snake_case)]` (part of `#[warn(nonstandard_style)]`) on by default

warning: `web` (lib) generated 11 warnings (run `cargo fix --lib -p web` to apply 10 suggestions)
    Checking nancy v0.1.0 (/home/craig/nancy)
error[E0583]: file not found for module `evaluate`
 --> src/commands/mod.rs:5:1
  |
5 | pub mod evaluate;
  | ^^^^^^^^^^^^^^^^^
  |
  = help: to create the module `evaluate`, create file "src/commands/evaluate.rs" or "src/commands/evaluate/mod.rs"
  = note: if there is a `mod evaluate` elsewhere in the crate already, import it with `use crate::...` instead

warning: unused imports: `Context` and `bail`
 --> src/commands/grind.rs:1:14
  |
1 | ...::{Context, Result, bail};
  |       ^^^^^^^          ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `git2::Repository`
 --> src/commands/grind.rs:2:5
  |
2 | use git2::Repository;
  |     ^^^^^^^^^^^^^^^^

warning: unused import: `tokio::fs`
 --> src/commands/grind.rs:3:5
  |
3 | use tokio::fs;
  |     ^^^^^^^^^

warning: unused imports: `AtomicBool` and `Ordering`
 --> src/commands/grind.rs:5:25
  |
5 | ...::{AtomicBool, Ordering};
  |       ^^^^^^^^^^  ^^^^^^^^

warning: unused import: `std::cell::RefCell`
 --> src/events/writer.rs:4:5
  |
4 | use std::cell::RefCell;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `PathBuf`
 --> src/agent.rs:4:23
  |
4 | ...ath, PathBuf};
  |         ^^^^^^^

For more information about this error, try `rustc --explain E0583`.
warning: `nancy` (lib) generated 6 warnings
error: could not compile `nancy` (lib) due to 1 previous error; 6 warnings emitted
